--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,7 @@
 @import "node_modules/font-awesome/scss/font-awesome.scss";
 // Variables
 @import "variables";
+@import "main";
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
